// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Large icon renders correctly 1`] = `
<span
  aria-hidden="true"
  className="lui-icon lui-icon--close lui-icon--large"
/>
`;

exports[`Missing icon renders correctly 1`] = `
<span
  aria-hidden="true"
  className="lui-icon"
/>
`;

exports[`Normal icon renders correctly 1`] = `
<span
  aria-hidden="true"
  className="lui-icon lui-icon--close"
/>
`;

exports[`Small icon renders correctly 1`] = `
<span
  aria-hidden="true"
  className="lui-icon lui-icon--close lui-icon--small"
/>
`;
